--- a/index.html
+++ b/index.html
@@ -13,7 +13,19 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        
+        <div class="header">
+            <div class="logo-box">
+                <img src="img/logo-white.png" alt="logo" class="logo">
+            </div>
+
+            <div class="header-item">
+                <h1 class="header-item-primery">
+                    <span class="header-item-primery-main">Outdoors</span>
+                    <span class="header-item-primery-sub">is where file happens</span>
+                </h1>
+            </div>
+
+        </div>
         
     </body>
 </html>
