header section completed

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                     <span class="header-item-primery-main">Outdoors</span>
                     <span class="header-item-primery-sub">is where file happens</span>
                 </h1>
+                <a href="#" class="btn btn-white btn-animated">discover aur tours</a>
             </div>
 
         </div>
