--- a/Nature/index.html
+++ b/Nature/index.html
@@ -25,8 +25,67 @@
                 </h1>
                 <a href="#" class="btn btn-white btn-animated">discover aur tours</a>
             </div>
-
         </div>
+        <main>
+            <div class="section-about">
+                <div class="u-center-text u-margin-bottom-big">
+                    <div class="heading-secondary">
+                        exciting tours for adventurous people
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-2">
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            you're going to fall in love with nature    
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus excepturi odit quaerat facilis rerum impedit harum unde perferendis nulla libero. Lorem ipsum dolor, sit amet consectetur adipisicing.
+                        </p>
+
+                        <h3 class="heading-tertiary u-margin-bottom-small">
+                            you're going to fall in love with nature    
+                        </h3>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus excepturi odit. Lorem ipsum dolor sit amet.
+                        </p>
+                        <a href="#" class="btn-text"> learn more &rarr;</a>
+                    </div>
+                    <div class="col-1-of-2">
+                       <div class="composition">
+                           <img src="img/nat-1-large.jpg" alt="" class="composition__photo composition__photo-p1">
+                           <img src="img/nat-2-large.jpg" alt="" class="composition__photo composition__photo-p2">
+                           <img src="img/nat-3-large.jpg" alt="" class="composition__photo composition__photo-p3">
+                       </div>
+                    </div>
+                </div>
+            </div>
+
+            <section class="section-features">
+            <div class="row">
+                <div class="col-1-of-3">
+                    <div class="features">
+                <i class="features-icon  icon-basic-world"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">explore the world</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum excepturi ab, architecto mollitia</p>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="features">
+                <i class="features-icon  icon-basic-compass"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">meet nature</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum excepturi ab, architecto mollitia</p>
+                    </div>
+                </div>
+                <div class="col-1-of-3">
+                    <div class="features">
+                <i class="features-icon  icon-basic-heart"></i>
+                <h3 class="heading-tertiary u-margin-bottom-small">live a healthier life</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum excepturi ab, architecto mollitia</p>
+                    </div>
+                </div>
+            </div>
+            </section>
+        </main>
         
     </body>
 </html>
