rotate cards section completed

--- a/Nature/index.html
+++ b/Nature/index.html
@@ -85,6 +85,109 @@
                 </div>
             </div>
             </section>
+            <section>
+                <div class="section-rotate">
+                    <div class="u-center-text u-margin-bottom-big">
+                        <div class="heading-secondary">
+                           Most Popular Tours
+                        </div>
+                    </div>
+                    <div class="row">
+                    <div class="col-1-of-3">
+                            <div class="card">
+                                <div class="card__slide card__slide-front">
+                                    <div class="card-image card-image-1">
+
+                                    </div>
+                                    <div class="card-heading">
+                                        <span class="card-heading-span card-heading-span-1 ">the sea explorer</span>
+                                    </div>
+                                    <div class="card-details">
+                                            <ul>
+                                                <li>3 day tours</li>
+                                                <li>Up to 30 people</li>
+                                                <li>2 tours guides</li>
+                                                <li>Sleep in cozy hotels</li>
+                                                <li>Difficulty: easy</li>
+                                            </ul>
+                                    </div>
+                                </div>
+                                <div class="card__slide card__slide-back card__slide-back-1 ">
+                                <div class="card-back">
+                                    <div class="card-back-price">
+                                        <p class="card-back-price-only">only</p>
+                                        <p class="card-back-price-value">$256</p>
+                                        <a href="#" class="btn btn-white"> Book Now</a>
+                                    </div>
+                                </div>    
+                                </div>
+                            </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__slide card__slide-front">
+                                <div class="card-image card-image-2">
+
+                                </div>
+                                <div class="card-heading">
+                                    <span class="card-heading-span card-heading-span-2 ">the sea explorer</span>
+                                </div>
+                                <div class="card-details">
+                                        <ul>
+                                            <li>3 day tours</li>
+                                            <li>Up to 30 people</li>
+                                            <li>2 tours guides</li>
+                                            <li>Sleep in cozy hotels</li>
+                                            <li>Difficulty: easy</li>
+                                        </ul>
+                                </div>
+                            </div>
+                            <div class="card__slide card__slide-back card__slide-back-2 ">
+                            <div class="card-back">
+                                <div class="card-back-price">
+                                    <p class="card-back-price-only">only</p>
+                                    <p class="card-back-price-value">$256</p>
+                                    <a href="#" class="btn btn-white"> Book Now</a>
+                                </div>
+                            </div>    
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__slide card__slide-front">
+                                <div class="card-image card-image-3">
+
+                                </div>
+                                <div class="card-heading">
+                                    <span class="card-heading-span card-heading-span-3 ">the sea explorer</span>
+                                </div>
+                                <div class="card-details">
+                                        <ul>
+                                            <li>3 day tours</li>
+                                            <li>Up to 30 people</li>
+                                            <li>2 tours guides</li>
+                                            <li>Sleep in cozy hotels</li>
+                                            <li>Difficulty: easy</li>
+                                        </ul>
+                                </div>
+                            </div>
+                            <div class="card__slide card__slide-back card__slide-back-3 ">
+                            <div class="card-back">
+                                <div class="card-back-price">
+                                    <p class="card-back-price-only">only</p>
+                                    <p class="card-back-price-value">$256</p>
+                                    <a href="#" class="btn btn-white"> Book Now</a>
+                                </div>
+                            </div>    
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn btn-green">Discover All Tours</a>
+            </section>
+            
         </main>
         
     </body>
