updated nature project with the video section

--- a/Nature/index.html
+++ b/Nature/index.html
@@ -188,6 +188,50 @@
                     <a href="#" class="btn btn-green">Discover All Tours</a>
             </section>
             
+            <section>
+                <div class="section-story">
+                    <div class="bg-video">
+                        <video class="bg-video-content" autoplay muted  loop>
+                            <source src="img/video.mp4">
+                            <source src="img/video.webm">
+                            Your Brouser don's support this background video
+                        </video>
+                    </div>
+                    <div class="u-center-text u-margin-bottom-big">
+                        <div class="heading-secondary">
+                           we make people genuinely happy
+                        </div>
+                    </div>
+                    <div class="row margin-row">
+                    <div class="story">
+                        <figure class="story-shape">
+                            <img src="img/nat-8.jpg" class="story-img" alt="">
+                            <div class="story-caption">
+                                mary smith
+                            </div>
+                        </figure>
+                        <div class="story-text">
+                            <h3 class="u-margin-bottom-small">i had the best week ever with my family</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, est rerum fugiat voluptatum minus error magnam totam, inventore molestiae maiores voluptas molestias edita ullam adipisci esse mollitia aliquid officiis dicta. Voluptatibus eius reprehenderit nemo dolorum suscipit, delectus est molestias sunt eum, minus quae?</p>
+                        </div>
+                    </div>
+                    <div class="story">
+                        <figure class="story-shape">
+                            <img src="img/nat-9.jpg" class="story-img" alt="">
+                            <figcaption class="story-caption">
+                               jack miller
+                            </figcaption>
+                        </figure>
+                        <div class="story-text">
+                            <h3 class="u-margin-bottom-small">WOW! my life is completly different now</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem, est rerum fugiat voluptatu ias magni qui veritatis hic atque animi assumenda expedita ullam adipisci esse mollitia aliquid officiis dicta. Voluptatibus eius reprehenderit nemo dolorum suscipit, delectus est molestias sunt eum, minus quae?</p>
+                        </div>
+                    </div>
+                    <a href="#" class="btn-text">Show More Story &rarr;</a>
+
+                </div>
+            </div>
+            </section>
         </main>
         
     </body>
