bookin section completed radio button pending

--- a/Nature/index.html
+++ b/Nature/index.html
@@ -232,6 +232,29 @@
                 </div>
             </div>
             </section>
+            <section class="section-book">
+                    <div class="row">
+                        <div class="book">
+                            <div class="book-form">
+                                <div class="u-margin-bottom-medium">
+                                    <h3 class="heading-secondary">
+                                       start booking now
+                                    </h3>
+                                </div>
+                                <form action="#">
+                                    <div class="form-group">
+                                            <input type="text" class="form-input" id="name" placeholder="Full Name" autocomplete="off" required>
+                                            <label for="name" class="form-label">Full Name</label>
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="email" class="form-input" id="email" placeholder="Full Email" autocomplete="off" required>
+                                        <label for="email" class="form-label">Full Email</label>
+                                </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+            </section>
         </main>
         
     </body>
