--- a/Nature/index.html
+++ b/Nature/index.html
@@ -250,6 +250,26 @@
                                         <input type="email" class="form-input" id="email" placeholder="Full Email" autocomplete="off" required>
                                         <label for="email" class="form-label">Full Email</label>
                                 </div>
+                                <div class="form-group u-margin-bottom-medium">
+                                    <div class="form-radio-group">
+                                        <input type="radio" name="size" id="small" class="form-radio-input">
+                                        <label for="small" class="form-radio-label">
+                                            <span class="form-radio-button"></span>
+                                            small tour group
+                                        </label>
+                                    </div>
+
+                                    <div class="form-radio-group">
+                                        <input type="radio" name="size" id="large" class="form-radio-input">
+                                        <label for="large" class="form-radio-label">
+                                            <span class="form-radio-button"></span>
+                                            large tour group
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="form-group ">
+                                    <button type="submit" class="btn btn-green">Nest Step &rarr;</button>
+                                </div>
                                 </form>
                             </div>
                         </div>
