added footer secttion

--- a/Nature/index.html
+++ b/Nature/index.html
@@ -276,6 +276,10 @@
                     </div>
             </section>
         </main>
-        
+        <div class="section-footer">
+            <div class="row">
+            <h3> Designed And Built By <a href="#" class="section-footer-link"> Harish tagadghar</a></h3>
+        </div>
+        </div>
     </body>
 </html>
