--- a/Nature/index.html
+++ b/Nature/index.html
@@ -13,6 +13,22 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation-checkbox" id="nav-toggle">
+
+            <label for="nav-toggle" class="navigation-button"><span class="navigation-icon">&nbsp;</span></label>
+
+            <div class="navigation-background"></div>
+            <nav class="navigation-nav">
+                <ul class="navigation-list">
+                    <li class="navigation-item"><a href="" class="navigation-link"><span>01</span> About nature</a></li>
+                    <li class="navigation-item"><a href="" class="navigation-link"><span>02</span> Your Benifites</a></li>
+                    <li class="navigation-item"><a href="" class="navigation-link"><span>03</span> popular tours</a></li>
+                    <li class="navigation-item"><a href="" class="navigation-link"><span>04</span> Stories</a></li>
+                    <li class="navigation-item"><a href="" class="navigation-link"><span>05</span> book now</a></li>
+                </ul>
+            </nav>
+        </div>
         <div class="header">
             <div class="logo-box">
                 <img src="img/logo-white.png" alt="logo" class="logo">
