--- a/Nature/index.html
+++ b/Nature/index.html
@@ -102,7 +102,7 @@
             </div>
             </section>
             <section>
-                <div class="section-rotate">
+                <div class="section-rotate" id="section-tours">
                     <div class="u-center-text u-margin-bottom-big">
                         <div class="heading-secondary">
                            Most Popular Tours
@@ -133,7 +133,7 @@
                                     <div class="card-back-price">
                                         <p class="card-back-price-only">only</p>
                                         <p class="card-back-price-value">$256</p>
-                                        <a href="#" class="btn btn-white"> Book Now</a>
+                                        <a href="#popup" class="btn btn-white"> Book Now</a>
                                     </div>
                                 </div>    
                                 </div>
@@ -163,7 +163,7 @@
                                 <div class="card-back-price">
                                     <p class="card-back-price-only">only</p>
                                     <p class="card-back-price-value">$256</p>
-                                    <a href="#" class="btn btn-white"> Book Now</a>
+                                    <a href="#popup" class="btn btn-white"> Book Now</a>
                                 </div>
                             </div>    
                             </div>
@@ -193,7 +193,7 @@
                                 <div class="card-back-price">
                                     <p class="card-back-price-only">only</p>
                                     <p class="card-back-price-value">$256</p>
-                                    <a href="#" class="btn btn-white"> Book Now</a>
+                                    <a href="#popup" class="btn btn-white"> Book Now</a>
                                 </div>
                             </div>    
                             </div>
@@ -296,6 +296,22 @@
             <div class="row">
             <h3> Designed And Built By <a href="#" class="section-footer-link"> Harish tagadghar</a></h3>
         </div>
+        </div>
+
+        <div class="popup" id="popup">
+            <div class="popup-content" >
+                <div class="popup-left">
+                    <img class="popup-img" src="img/nat-8.jpg" alt="">
+                    <img class="popup-img" src="img/nat-9.jpg" alt="">
+                </div>
+                <div class="popup-right">
+                    <a class="popup-cancle" href="#section-tours">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small"> please read the document carefully while booking</h3>
+                    <p class="popup-text u-margin-bottom-big">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores numquam veritatis vel qui ab alias et molestias, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, dicta? Dicta facilis aspernatur eligendi itaque commodi consequuntur pariatur culpa ut vitae! Impedit a officia mollitia perferendis optio provident aliquam sapiente dignissimos similique error dolorem magnam, nihil vitae eligendi fuga animi omnis! Earum sint soluta quos aliquid cumque minus error numquam! adipisci optio quia ullam velit earum iste corrupti sit perspiciatis nulla debitis laborum saepe eos recusandae, quod, dolor illo voluptatibus? Beatae quaerat placeat eveniet debitis itaque quas aspernatur in molestiae modi, expedita ab?</p>
+                    <a href="" class="btn btn-green"> Book Now</a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
